using SqlOnAir.DotNet.Lib.DataClasses.BaseClasses;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SqlOnAir.DotNet.Lib.DataClasses
{
    public class ERBVersion: ERBVersionBase
    {
        // Any implementation here will not be overwritten
    }
}
